--- a/index.html
+++ b/index.html
@@ -34,18 +34,23 @@
             <p>Soy un estudiante de DAM 1 en el instituto <a href="https://mollerussa.lasalle.cat/" target="_blank">La Salle Mollerussa</a> y anteriormente estaba estudiando el ciclo medio de SMX en el <a href="https://www.iescaparrella.cat/" target="_blank">Instituto La Caparrella</a> mi objetivo es poder ser programador de videojuegos.</p>
                 <h3 id="leng">Lenguajes</h3>
                     <div class="lenguaje">
-                        <a><img src="/imagenes/181_Java_logo_logos-512.png" alt="java">Java</a>
-                        <a><img src="/imagenes/HTML5_Badge.svg.png" alt="html">HTML</a>
-                        <a><img src="/imagenes/CSS3_logo.svg.png" alt="css">CSS</a>
-                        <a><img src="/imagenes/php-1-logo-png-transparent.png" alt="php">PHP</a>
-                        <a><img src="/imagenes/Bash_Logo_Colored.svg.png" alt="bash">BASH</a>
-                        <a><img src="/imagenes/Lua-Logo.svg.png" alt="lua">Lua</a>
-                        <a><img src="/imagenes/javascript-logo-javascript-icon-transparent-free-.png" alt="js">JavaScrip</a>
+                        <a><img src="/imagenes/181_Java_logo_logos-512.png" alt="java">Java (Novato)</a>
+                        <a><img src="/imagenes/HTML5_Badge.svg.png" alt="html">HTML (Medio)</a>
+                        <a><img src="/imagenes/CSS3_logo.svg.png" alt="css">CSS (Medio)</a>
+                        <a><img src="/imagenes/php-1-logo-png-transparent.png" alt="php">PHP (Medio)</a>
+                        <a><img src="/imagenes/Bash_Logo_Colored.svg.png" alt="bash">BASH (Novato)</a>
+                        <a><img src="/imagenes/Lua-Logo.svg.png" alt="lua">Lua (Novato)</a>
+                        <a><img src="/imagenes/javascript-logo-javascript-icon-transparent-free-.png" alt="js">JavaScrip (Novato)</a>
                     </div>
         </section>
         <section id="proyectos" class="section">
         <h2 id="proyectos">PROJECTOS</h2>
             <p>En general la gran mayoria de mis proyectos han sido trabajos de clase, el mas destacable a sido una pagina web echa con PHP, HTML y CSS con una base de datos en SQL tenia varias funciones como por ejemplo: niveles de usuario, permisos dependiendo el tipo de usuario (modificacion, eliminacio y creacion).</p>
+            <div class="projecto">
+                <img src="/imagenes/Captura de pantalla 2024-10-14 172711.png" alt="projecte" id="codi">
+                <img src="/imagenes/admin.png" alt="admin">
+                <img src="/imagenes/php.png" alt="php">
+            </div>
     </section>
     </div>
 </body>
