--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 </li>
             </ul>
         </nav>
+        <h1>arregla aquesta pagina</h1>
             <div class="contacto">
                 <span class="contacto-texto">Contacto</span>
                     <div class="iconos">
